--- a/tests/sanitycheck/main.tex
+++ b/tests/sanitycheck/main.tex
@@ -3,5 +3,6 @@
 \exercisebanksetup{exercise directory=../exercises}
 \makeset{1}{dummy}
 \begin{document}
+This file should show no X-es and only problem 2.
 \buildtags{fiche2}{1}
 \end{document}
