--- a/src/helpers.tex
+++ b/src/helpers.tex
@@ -2,30 +2,30 @@
 \makeatletter
 \edef\@isTrue{1}
 \edef\@isFalse{0}
-\gdef\exb@int@isin#1#2#3#4{
+\gdef\exb@int@isin#1#2#3#4{%
 	\def\needle{#1}
 	\def\haystack{#2}
-	\ifx\haystack\empty\relax#4\else
-		\def\isFalse{0}
-		\let\isInList = \isFalse
-		\IfInteger{\needle}{}{\@latex@error{ISIN: Can't look for part problem that is not numeric: `\needle' in `\haystack'!}{}\bye\stop}
+	\ifx\haystack\empty\relax#4\else%
+		\def\isFalse{0}%
+		\let\isInList = \isFalse%
+		\IfInteger{\needle}{}{\@latex@error{ISIN: Can't look for part problem that is not numeric: `\needle' in `\haystack'!}{}\bye\stop}%
 		\IfInteger{\haystack}{
-			\ifnum\haystack=\needle\relax
-				#3
-			\else
-				#4
-			\fi
+			\ifnum\haystack=\needle\relax%
+				#3%
+			\else%
+				#4%
+			\fi%
 		}{
-			\foreach \pp in #2{
+			\foreach \pp in #2{%
 					\ifnum\pp=\needle\relax%
-						\gdef\isInList{1}
-						#3
-					\fi
-				}
-			\if\isInList\isFalse
-				#4
-			\fi
-		}
+						\gdef\isInList{1}%
+						#3%
+					\fi%
+				}%
+			\if\isInList\isFalse%
+				#4%
+			\fi%
+		}%
 	\fi}
 \newif\ifexb@isInList
 \newcounter{exb@isin@dots}
@@ -49,11 +49,11 @@
 	% \@dlog{h:\haystack\space n:\needle}%
 	\ifx\haystack\empty\relax#4\else%
 		\readlist*\items\haystack%
-		\foreachitem\itm\in\items{
+		\foreachitem\itm\in\items{%
 			\ifnum\pdfstrcmp{\needle}{\itm}=\z@\relax%
 				\global\exb@isInListtrue%
-				#3\fi
-		}
+				#3\fi%
+		}%
 		\ifexb@isInList\else%
 			#4
 		\fi\fi%
@@ -87,11 +87,11 @@
 	\egroup%
 }
 \@ifundefined{exbank@quiet}{
-	\gdef\@dlog#1{\@latex@warning{::DEBUG:#1}}
+	\gdef\@dlog#1{\@latex@warning{::DEBUG:#1}}%
 }{
-	\global\let\@dlog\@noneofone
+	\global\let\@dlog\@noneofone%
 }
-
+\gdef\shownextchar#1{\@latex@warning{NEXT:\string#1}#1}
 \newcommand\ex@before[2]{
 	\edef #1{\unexpanded{#2}\unexpanded\expandafter{#1}}
 }
@@ -110,14 +110,31 @@
 }
 % TODO: FINISH
 \newif\ifexb@isintersection
-\def\exb@intersection@any#1#2#3#4{
-	\global\exb@isintersectionfalse
-	\edef\listarg{#1}
-	\ifx\listarg\empty\@dlog{RELAX}#4\else
-	\readlist*\needlelist{#1}
-		\foreachitem\needle\in\needlelist{
-			\exb@isin{\needle}{#2}{\exb@isintersectiontrue}{}
-		}
+\def\exb@intersection@any#1#2#3#4{%
+	\global\exb@isintersectionfalse%
+	\edef\listarg{#1}%
+	\ifx\listarg\empty\@dlog{RELAX}#4\else%
+	\readlist*\needlelist{#1}%
+		\foreachitem\needle\in\needlelist{%
+			\exb@isin{\needle}{#2}{\global\exb@isintersectiontrue}{}%
+		}%
 		\ifexb@isintersection#3\else#4\fi%
-		\fi
+		\fi%
 }
+\gdef\@makespacesignored{%
+\global\let\@oldtilde~%
+\gdef~{ }%
+\global\catcode`\^^M=9\relax%
+\global\catcode`\^^J=9\relax%
+\global\catcode` =9\relax%
+}
+\gdef\@makespacesnormal{%
+\global\let~\@oldtilde%
+\global\catcode`\^^M=5\relax%
+\global\catcode`\^^J=12\relax%
+\global\catcode` =10\relax%
+}
+\let\nextPar\everypar
+\newtoks\everypar
+\nextPar{\the\everypar}
+\def\AtNextPar#1{\nextPar\expandafter{\the\nextPar\nextPar{\the\everypar}#1}}
