--- a/src/helpers.tex
+++ b/src/helpers.tex
@@ -126,13 +126,13 @@
 \gdef~{ }%
 \global\catcode`\^^M=9\relax%
 \global\catcode`\^^J=9\relax%
-\global\catcode` =9\relax%
+\global\catcode`\ =9\relax%
 }
 \gdef\@makespacesnormal{%
 \global\let~\@oldtilde%
 \global\catcode`\^^M=5\relax%
 \global\catcode`\^^J=12\relax%
-\global\catcode` =10\relax%
+\global\catcode`\ =10\relax%
 }
 \let\nextPar\everypar
 \newtoks\everypar
